
<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/editText_SearchTxt"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/search_message"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textColor="#000000" >
        </EditText>

        <ImageView
            android:id="@+id/mylocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/image_desc" />

        <TextView
            android:id="@+id/attribution"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="2dp"
            android:gravity="center" />
    </RelativeLayout>

    <!--
         <ProgressBar
        android:id="@+id/progressBar_loadheatmap"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:indeterminate="true" />
    -->


    <!--
         android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view.
    -->

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/selectedkeyword_textview" />

        <Spinner
            android:id="@+id/keywordsspinner"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:prompt="@string/defaultkeyword" />

        <View style="@style/Divider" />

        <RadioGroup
            android:id="@+id/radioMapType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioNormalMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button"
                android:checked="true"
                android:text="@string/radio_normalmap" />

            <RadioButton
                android:id="@+id/radioHybridMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@drawable/radio_button"
                android:text="@string/radio_hybridmap" />
        </RadioGroup>

        <Button
            android:id="@+id/tweetsmakers_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:onClick="onButtonClicked"
            android:text="@string/showtweetsmakersbutton_text" >
        </Button>

        <Button
            android:id="@+id/heatmap_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:onClick="onButtonClicked"
            android:text="@string/heatmap_text" >
        </Button>

        <Button
            android:id="@+id/trendmap_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:onClick="onButtonClicked"
            android:text="@string/trendmap_text" >
        </Button>

        <Button
            android:id="@+id/show_timeline"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:onClick="onButtonClicked"
            android:text="@string/timeline_text" >
        </Button>

        <View style="@style/Divider" />

        <Button
            android:id="@+id/setting_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:onClick="onButtonClicked"
            android:text="@string/setting_text" >
        </Button>

        <View style="@style/Divider" />

        <Button
            android:id="@+id/help_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:onClick="onButtonClicked"
            android:text="@string/help_text" >
        </Button>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>